1. The gemini api issue fixed. 2.The solution box max-height is provided for scrollbar

--- a/Project/style.css
+++ b/Project/style.css
@@ -561,6 +561,8 @@ body {
     padding: 12px;
     border-radius: 10px;
     text-align: left;
+    overflow: scroll;
+    max-height: 250px;
   }
   
   .practice-box ul {
